--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Jayanti18/jayantiPortfolio#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "request": "^2.88.0"
   }
